# dotfiles

./: .ansible-lint  .editorconfig  .env.dist  .gitignore  .hive.yml  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ansible.cfg  conftest.py  dotfiles  mise.toml  playbook.yml  pyproject.toml  renovate.json  requirements.yml  trivy.yaml
.claude/: file-suggestion.sh  settings.json
.config/: ansible-lint.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
ansible_plugins/filter/: merge_mcp_servers.py  resolve_github_signing_keys.py  resolve_local_paths.py  resolve_op_secrets.py  resolve_templates.py
ansible_plugins/inventory/: dotfiles_profiles.py  profiles.yml
ansible_plugins/lookup/: README.md  aggregated_profile_var.py  vault_secret.py
docs/: agent-management.md  architecture.md  claude-code.md  cli.md  lazygit.md  macos-keyboard.md  neovim-keybindings.md  neovim.md  nvim-git-integration.md  productivity-tools.md  profiles.md  secrets.md  testing.md  zellij.md
docs/assets/: demo.tape
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/macos-integration/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
profiles/agents/: .gitignore  README.md  config.yml
profiles/common/: config.yml
profiles/development/: config.yml
profiles/macos/: .gitignore  config.yml
profiles/macos-desktop/: config.yml
profiles/neovim/: config.yml
profiles/shell/: config.yml
roles/brew_packages/: README.md
roles/chsh/: README.md
roles/composer/: README.md
roles/cursor_cli/: README.md
roles/docker/: README.md
roles/dotfiles/: README.md
roles/gem/: README.md
roles/gh_extensions/: README.md
roles/gh_repos/: README.md
roles/gitconfig/: README.md
roles/json_config/: README.md
roles/mas/: README.md
schemas/: config.schema.json
scripts/: generate_config_schema.py
tests/: test_merge_mcp_servers.py  test_resolve_github_signing_keys.py
(+299 files in other folders)
